--- a/Week4.ipynb
+++ b/Week4.ipynb
@@ -45,7 +45,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 93,
       "id": "1888593e-817d-4148-954d-5d156593bd8d",
       "metadata": {
         "colab": {
@@ -53,7 +53,7 @@
           "height": 424
         },
         "id": "1888593e-817d-4148-954d-5d156593bd8d",
-        "outputId": "b30f4e7f-3bc5-4ab5-bfe9-fabd08fecd95"
+        "outputId": "1800364b-0a62-438f-bc6b-5edd476ae368"
       },
       "outputs": [
         {
@@ -77,7 +77,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-90eeee69-0ee1-42e4-b77f-705bc3a28eb5\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-e9a8920c-1c93-4699-b74a-961c9c58adbc\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -151,7 +151,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-90eeee69-0ee1-42e4-b77f-705bc3a28eb5')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e9a8920c-1c93-4699-b74a-961c9c58adbc')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -203,12 +203,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-90eeee69-0ee1-42e4-b77f-705bc3a28eb5 button.colab-df-convert');\n",
+              "        document.querySelector('#df-e9a8920c-1c93-4699-b74a-961c9c58adbc button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-90eeee69-0ee1-42e4-b77f-705bc3a28eb5');\n",
+              "        const element = document.querySelector('#df-e9a8920c-1c93-4699-b74a-961c9c58adbc');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -228,7 +228,7 @@
               "  </div>\n",
               "\n",
               "\n",
-              "  <div id=\"id_113eef3e-7856-41ce-8be6-25d460708f4f\">\n",
+              "  <div id=\"id_5179a3b9-7a71-49a6-9063-f9392c1138bd\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -272,7 +272,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_113eef3e-7856-41ce-8be6-25d460708f4f button.colab-df-generate');\n",
+              "        document.querySelector('#id_5179a3b9-7a71-49a6-9063-f9392c1138bd button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -293,7 +293,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 93
         }
       ],
       "source": [
@@ -309,7 +309,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 94,
       "id": "13745ab1-8a9b-4568-bf56-3245fa36a358",
       "metadata": {
         "colab": {
@@ -317,7 +317,7 @@
           "height": 484
         },
         "id": "13745ab1-8a9b-4568-bf56-3245fa36a358",
-        "outputId": "6e955dae-e83f-4383-8092-0dc442ff2fb6"
+        "outputId": "42c22054-7cbc-460d-8b51-00b2084da71c"
       },
       "outputs": [
         {
@@ -336,7 +336,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 94
         },
         {
           "output_type": "display_data",
@@ -356,7 +356,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 95,
       "id": "d4dbce72-bd33-43a2-b3e7-354a1cca6e39",
       "metadata": {
         "colab": {
@@ -364,7 +364,7 @@
           "height": 448
         },
         "id": "d4dbce72-bd33-43a2-b3e7-354a1cca6e39",
-        "outputId": "5fdb3c9d-3b09-4094-8e30-27a7f53468ed"
+        "outputId": "9187fb71-fa2b-442d-e696-64e1156e544a"
       },
       "outputs": [
         {
@@ -375,7 +375,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 95
         },
         {
           "output_type": "display_data",
@@ -437,15 +437,15 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "YgUNY80gsoWs",
-        "outputId": "a69aed7b-0c3f-4a84-c935-670c366e1e39",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 508
-        }
+        },
+        "id": "YgUNY80gsoWs",
+        "outputId": "c0d2c728-2ec1-4694-cb59-79be27a503bd"
       },
       "id": "YgUNY80gsoWs",
-      "execution_count": 30,
+      "execution_count": 96,
       "outputs": [
         {
           "output_type": "stream",
@@ -484,15 +484,15 @@
         "plt.show()\n"
       ],
       "metadata": {
-        "id": "5x0A0V5sx4DD",
-        "outputId": "22e276f8-64a8-40e0-ee9b-f9560428a5c6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 487
-        }
+        },
+        "id": "5x0A0V5sx4DD",
+        "outputId": "57539d22-b369-4054-fd99-752081ea666c"
       },
       "id": "5x0A0V5sx4DD",
-      "execution_count": 59,
+      "execution_count": 97,
       "outputs": [
         {
           "output_type": "display_data",
@@ -555,7 +555,7 @@
     {
       "cell_type": "code",
       "source": [
-        "datasource= \"https://archive.ics.uci.edu/static/public/17/data.csv\"\n",
+        "datasource= \"http://archive.ics.uci.edu/static/public/17/data.csv\"\n",
         "\n",
         "df_BreastCancer = pd.read_csv(datasource, sep=',', header=0) #loading breast cancer dataset\n",
         "df_BreastCancer.sample(10, random_state=42)"
@@ -566,10 +566,10 @@
           "height": 412
         },
         "id": "tcdIUcR1i4ow",
-        "outputId": "6a7aea45-acf5-425d-e8a3-f15198e0d408"
+        "outputId": "ce68e9af-9898-4093-82f2-3f2767799274"
       },
       "id": "tcdIUcR1i4ow",
-      "execution_count": null,
+      "execution_count": 98,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -627,7 +627,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-d8d5a1ee-8a52-4b72-98ac-ff6a0f3951be\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-e4e40ecf-cb32-41ed-8505-b7b8850a38ec\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -917,7 +917,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d8d5a1ee-8a52-4b72-98ac-ff6a0f3951be')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e4e40ecf-cb32-41ed-8505-b7b8850a38ec')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -969,12 +969,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-d8d5a1ee-8a52-4b72-98ac-ff6a0f3951be button.colab-df-convert');\n",
+              "        document.querySelector('#df-e4e40ecf-cb32-41ed-8505-b7b8850a38ec button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-d8d5a1ee-8a52-4b72-98ac-ff6a0f3951be');\n",
+              "        const element = document.querySelector('#df-e4e40ecf-cb32-41ed-8505-b7b8850a38ec');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1002,7 +1002,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 98
         }
       ]
     },
@@ -1017,10 +1017,10 @@
           "height": 350
         },
         "id": "hHUs3rnUp0_m",
-        "outputId": "d533cd0e-2f8e-4594-e8a9-e2cba717db98"
+        "outputId": "7f1c177b-903f-4aa8-f86c-6a0adb8196b1"
       },
       "id": "hHUs3rnUp0_m",
-      "execution_count": null,
+      "execution_count": 99,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1080,7 +1080,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-95a1b336-7b7c-441f-abb7-34050f5966b7\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-a2f04e01-24d9-400d-a76f-2b081d27b999\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1322,7 +1322,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-95a1b336-7b7c-441f-abb7-34050f5966b7')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a2f04e01-24d9-400d-a76f-2b081d27b999')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1374,12 +1374,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-95a1b336-7b7c-441f-abb7-34050f5966b7 button.colab-df-convert');\n",
+              "        document.querySelector('#df-a2f04e01-24d9-400d-a76f-2b081d27b999 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-95a1b336-7b7c-441f-abb7-34050f5966b7');\n",
+              "        const element = document.querySelector('#df-a2f04e01-24d9-400d-a76f-2b081d27b999');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1407,7 +1407,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 99
         }
       ]
     },
@@ -1422,10 +1422,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3UieUhQ3wlwm",
-        "outputId": "f3fc793f-e17a-48a2-86f4-9dfc60037f8d"
+        "outputId": "3c7d4643-fe49-4fd4-ae5c-085bf9cb83a3"
       },
       "id": "3UieUhQ3wlwm",
-      "execution_count": null,
+      "execution_count": 100,
       "outputs": [
         {
           "output_type": "stream",
@@ -1487,10 +1487,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wemTB9wSwqPo",
-        "outputId": "03dd5f28-c5a3-4a49-d7cd-407c3e6d9a91"
+        "outputId": "648ac0a1-6f92-468e-c06c-0c5665628957"
       },
       "id": "wemTB9wSwqPo",
-      "execution_count": null,
+      "execution_count": 101,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1500,7 +1500,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 101
         }
       ]
     },
@@ -1528,10 +1528,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3w7loLqHzXhg",
-        "outputId": "76bd1ef0-0872-499f-d5ed-db6ac0056d6e"
+        "outputId": "50c13de0-6016-4df5-959a-fa21981d6f05"
       },
       "id": "3w7loLqHzXhg",
-      "execution_count": null,
+      "execution_count": 102,
       "outputs": [
         {
           "output_type": "stream",
@@ -1672,16 +1672,16 @@
           "height": 1000
         },
         "id": "Q8YNr6s7A_CN",
-        "outputId": "62c7b45f-442e-4cf5-a27a-e7d1f6011aad"
+        "outputId": "57c6944b-f905-4990-f969-2b50bd2b00be"
       },
       "id": "Q8YNr6s7A_CN",
-      "execution_count": null,
+      "execution_count": 112,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/tmp/ipython-input-4031736855.py:21: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
+            "/tmp/ipython-input-1928902361.py:21: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
             "  plt.legend()\n"
           ]
         },
@@ -2008,10 +2008,10 @@
           "height": 1000
         },
         "id": "1wUdcvUg0MkX",
-        "outputId": "8adae1ab-ad81-4ccc-8ec1-8bb9559dd4a5"
+        "outputId": "7a192bd7-7146-4e9b-c99c-726a2f2ece1f"
       },
       "id": "1wUdcvUg0MkX",
-      "execution_count": null,
+      "execution_count": 104,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2526,10 +2526,10 @@
           "height": 1000
         },
         "id": "5jgVB3aYJcm0",
-        "outputId": "a73cd709-177c-4771-a133-450fd40aa713"
+        "outputId": "292b1ae8-bff2-4e66-b706-52f99d66faef"
       },
       "id": "5jgVB3aYJcm0",
-      "execution_count": null,
+      "execution_count": 105,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2852,10 +2852,10 @@
           "height": 1000
         },
         "id": "5u8hynFwM5_s",
-        "outputId": "1e758faf-cf41-4ad8-f46d-d7a64f5b181d"
+        "outputId": "b65cbafa-6de5-4db3-fd93-4de96bf87867"
       },
       "id": "5u8hynFwM5_s",
-      "execution_count": null,
+      "execution_count": 106,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3177,10 +3177,10 @@
           "height": 1000
         },
         "id": "j9PlIlFtQqOL",
-        "outputId": "9eb3991d-68fd-4f23-bdfe-edf9edc76b49"
+        "outputId": "f236fdfe-ae17-4684-d86b-cc10aa4c9891"
       },
       "id": "j9PlIlFtQqOL",
-      "execution_count": null,
+      "execution_count": 107,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3280,10 +3280,10 @@
           "height": 505
         },
         "id": "TeLy2Sn4Up1k",
-        "outputId": "ea398536-8919-4eb8-d77a-59afb87cec73"
+        "outputId": "47e29d8a-88b3-4884-c55c-7dd7d929f980"
       },
       "id": "TeLy2Sn4Up1k",
-      "execution_count": null,
+      "execution_count": 108,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3324,10 +3324,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IKeP_aCki1TF",
-        "outputId": "b7e76b20-a69f-46a1-f602-2e3064332667"
+        "outputId": "7c24f64b-6bf7-4b65-d290-6f3003bed559"
       },
       "id": "IKeP_aCki1TF",
-      "execution_count": null,
+      "execution_count": 109,
       "outputs": [
         {
           "output_type": "stream",
@@ -3439,7 +3439,9 @@
         "**Are there any outliers present?** Outliers are present in the data mainly on the upper end as most of the data are right skewed. But these are statistical outliers but not necessarily errors or bad data. Malignant tumors will generate large values and they are clinically meaningful data.\n",
         "\n",
         "**How do bin sizes affect the histogram?:** Bin size has significant effect on histogram charts, changing bin size reveals hidden patterns; Narrow bins(large number of bins) properly show outliers, skewness and long tail is clearly visible. Wide bins(small number of bins) can hide important insight and it smooth the data distribution. Data may look somewhat bell-shaped and symmetric. These differences are clearly visible while using bin=5 and bin=20.\n",
-        "With bin size 5 interpretation will be wrong as data looked normal.  For this dataset I will prefer to use bin width 20."
+        "With bin size 5 interpretation will be wrong as data looked normal.  For this dataset I will prefer to use bin width 20.\n",
+        "\n",
+        "**Distribution:** Majority of the distribution is right skewed and few bell shaped normal distribution can be observed."
       ],
       "metadata": {
         "id": "opGVPZb0vbuZ"
@@ -3468,7 +3470,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 110,
       "id": "5a7e4b4b-977a-4b0e-bec2-1f34a514da44",
       "metadata": {
         "id": "5a7e4b4b-977a-4b0e-bec2-1f34a514da44",
@@ -3476,7 +3478,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 807
         },
-        "outputId": "317bcc4a-9d06-4d9e-d5a0-3d4285b4febc"
+        "outputId": "51596394-e87c-4758-ee66-1fda3fbf082a"
       },
       "outputs": [
         {
@@ -3491,6 +3493,7 @@
         }
       ],
       "source": [
+        "#Fig2.26 Secondary Y axis\n",
         "#Generating Sales Revenue data\n",
         "num_employee = 50\n",
         "np.random.seed(0)\n",
