--- a/OMDS-ModB2-Week2-Banerjee-Jayeeta.ipynb
+++ b/OMDS-ModB2-Week2-Banerjee-Jayeeta.ipynb
@@ -35,7 +35,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "For this week's exercise I have chosen Breast Cancer Wisconsin Diagnostic data. This dataset derived from the digitized image of a fine niddle aspirate(FNA) of breast mass. The dataset consists of important features(computed for each cell nucleus) such as radius, texture, perimeter, area, compactness, smoothness, concave points, concavity, fractal dimensions etc and a clear target value \"Diagnosis\" to distinguish between malignant and benign cases. A short description is provided below to analyze a possible Who, What, and How for this dataset, using the ideas in the The Storytelling With Data book.\n",
+        "For this week's exercise I have chosen Breast Cancer Wisconsin Diagnostic data. This dataset derived from the digitized image of a fine needle aspirate(FNA) of breast mass. The dataset consists of important features(computed for each cell nucleus) such as radius, texture, perimeter, area, compactness, smoothness, concave points, concavity, fractal dimensions etc and a clear target value \"Diagnosis\" to distinguish between malignant and benign cases. A short description is provided below to analyze a possible Who, What, and How for this dataset, using the ideas in the The Storytelling With Data book.\n",
         "\n",
         "**Who:** This signifies the audience. The audiences are, healthcare professionals such as radiologist, oncologist, clinical researchers, data scientists, cancer patients, hospitals administrators(for resource allocation purpose).\n",
         "\n",
@@ -82,7 +82,7 @@
         "outputId": "4e9ec04f-8123-4a38-9d11-62bc8ccd9db2"
       },
       "id": "4DaFh4BUrp_M",
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -141,7 +141,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "fe925521-979f-4983-8d85-8db8d1316e99",
       "metadata": {
         "id": "fe925521-979f-4983-8d85-8db8d1316e99"
@@ -170,7 +170,7 @@
         "outputId": "cea810d5-fd2e-4d01-bd96-b5db52fd0e0c"
       },
       "id": "IEaW9JdKs6u2",
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -657,7 +657,7 @@
         "outputId": "67fa4fdb-33da-4afc-874b-b3cf56d6888e"
       },
       "id": "axU1z7wEtfRK",
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -693,7 +693,7 @@
         "outputId": "a9eb0a8c-0e95-4e7b-fe38-1ccea672ca77"
       },
       "id": "MZXXwzGGt4hx",
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1105,7 +1105,7 @@
         "outputId": "3aece3ee-6134-4e05-fe7a-81adb91a6f77"
       },
       "id": "oFOYDTZGuOkS",
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1169,7 +1169,7 @@
         "outputId": "92c5c8da-6214-460b-b335-0ccdc0bd5d13"
       },
       "id": "K0Fv6ulQuatA",
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1198,7 +1198,7 @@
         "outputId": "eb1b79cc-facb-4ed5-b308-a23408b17f55"
       },
       "id": "eN_kpPDe53iR",
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1230,7 +1230,7 @@
         "outputId": "0de59aa4-82dc-4875-8568-e94f7c2b2dc1"
       },
       "id": "mu7k6BaT9A5I",
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1458,7 +1458,7 @@
         "outputId": "24901fe0-0f33-4408-ffe0-ea07e3e473f6"
       },
       "id": "385iyxX39Ahb",
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1637,7 +1637,7 @@
         "outputId": "0d0d45bc-8e2d-4623-e4c6-a93cf3633532"
       },
       "id": "VqFR0Lr3Ylcf",
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2172,7 +2172,7 @@
         "outputId": "a5d8d095-5063-48fa-e603-c064211a326b"
       },
       "id": "qdzOOlf208eB",
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2210,7 +2210,7 @@
         }
       },
       "id": "GdI8Heo05xTi",
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2293,7 +2293,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": null,
       "id": "8b2888f9-3700-45ab-9829-6a5372106f9f",
       "metadata": {
         "colab": {
