--- a/OMDS-ModB2-Week2-Banerjee-Jayeeta.ipynb
+++ b/OMDS-ModB2-Week2-Banerjee-Jayeeta.ipynb
@@ -2262,9 +2262,19 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "3alxLVXeehJi"
+      },
+      "id": "3alxLVXeehJi",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "**Conclusion**: The breast cancer dataset is a clean dataset with no missing value and no duplicates records. I do not need to modify any features. This dataset doesn’t have equal number of data of each class from the categorical column dignosis(B, M). From the analysis we can see benign case is 62.7% and malignant case is 37.3% out of 569 instances. Benign class is notably(almost twice) larger than the malignant class. Hence the classes are imbalance. We can see some outliers in the data but best approach will be to visualize the data using histogram method"
+        "**Conclusion**: The breast cancer dataset is a clean dataset with no missing value and no duplicate records. I do not need to modify any features. This dataset doesn’t have equal number of data of each class from the categorical column diagnosis(B, M). From the analysis we can see benign case is 62.7% and malignant case is 37.3% out of 569 instances. Benign class is notably(almost twice) larger than the malignant class. Hence the classes are imbalance. We can see some outliers in the data but best approach will be to visualize the data using histogram method"
       ],
       "metadata": {
         "id": "kgO9hTQ2iINP"
